Fixed tasks drawer overlapping content bug.

--- a/src/render/public/css/site.css
+++ b/src/render/public/css/site.css
@@ -1,3 +1,7 @@
 .mw-4 {
   max-width: 4em;
 }
+
+#app {
+  padding-bottom: 100px;
+}
